fix(styles): improve hover visibility for right-sidebar links in dark & light mode (#7894)

--- a/packages/ui-components/Containers/MetaBar/index.module.css
+++ b/packages/ui-components/Containers/MetaBar/index.module.css
@@ -51,11 +51,13 @@
         font-semibold
         text-neutral-900
         underline
+        transition-colors
+        duration-200
         dark:text-white;
 
       &:hover {
-        @apply text-neutral-800
-          dark:text-neutral-200;
+        @apply text-neutral-700
+            dark:text-neutral-600;
       }
     }
 
@@ -66,6 +68,22 @@
         flex-col
         gap-1.5
         p-0;
+
+      li {
+        a {
+          @apply font-semibold
+            text-neutral-900
+            underline
+            transition-colors
+            duration-200
+            dark:text-white;
+
+          &:hover {
+            @apply text-neutral-700
+              dark:text-neutral-600;
+          }
+        }
+      }
     }
 
     svg {
